--- a/Basics_Kotlin/TabLayout_ViewPager2/app/src/main/res/values-night/themes.xml
+++ b/Basics_Kotlin/TabLayout_ViewPager2/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FragmentLayout" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.TabLayout_ViewPager2" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
         <!-- Customize your theme here. -->
